# hacker-dashboard

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  Skills.md  docker-compose.yml
.claude/: settings.json
backend/: .deploy-trigger  .dockerignore  .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_week2_watchlist.py  002_week3_portfolio.py  003_sprint02_pgvector_documents.py  004_sprint05_copilot_sessions.py  005_sprint08_watchlist_alerts.py  006_user_settings.py  007_b2b_multi_client.py  008_portfolio_import_batches.py  009_client_registry.py  010_durable_partial_import_core.py  011_nullable_snapshot_pnl.py
backend/app/: export_openapi.py  main.py
backend/app/agents/: graph.py  llm.py  planner.py  router.py  state.py
backend/app/api/: analyze.py  copilot.py  health.py  market.py  notifications.py  portfolio.py  search.py  upload.py  user.py  watchlist.py  ws.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: models.py  session.py
backend/app/schemas/: analyze.py  copilot.py  market.py  news.py  notifications.py  portfolio.py  rebalance.py  upload.py  user.py  watchlist.py
backend/app/services/: __init__.py  analyze_cache.py  clients.py  fx.py  indicators.py  market_fixtures.py  market_leaders.py  notifications.py  portfolio.py  portfolio_service.py  portfolio_snapshot.py  rebalance.py  report.py  sector_map.py  upload.py  upload_import.py  user_settings.py  watchlist.py
backend/app/static/: sample_portfolio.csv
backend/scripts/: repair_demo_data.py  seed_snapshots.py  seed_user_settings.py  seed_watchlist_alerts.py
backend/tests/: conftest.py  test_analyze.py  test_health.py
(+597 files in other folders)
